# craftmesher

./: .gitignore  Makefile.am  Makefile_macOS  README.md  configure.ac  stl_binary2ascii.py
Examples/: .gitignore  README  shrinkVol.py
Examples/Crack/: AdvCrack
Examples/Crack/Meshing/: config.xml  mesh.sh
Examples/Voids/: VoidList  holes
Examples/Voids/Meshing/: config.xml  mesh.sh
src/: GlobalMesh.cpp  GlobalMesh.h  Grain.cpp  Grain.h  crackMesher.cpp  debug.h  programSettings.h
src/MeshIO/: INPReader.cpp  INPReader.h  TetGen.cpp  TetGen.h  asciiSTL.cpp  asciiSTL.h
src/refine/: coarsenSurf.h  refineSurf.h
